updated from homeclimatecontrol, added 3A switch and put new libs after recomplile into dz3-shell/lib